syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "/generated";

service TransmitterService {
  rpc GetFrequencyStream (google.protobuf.Empty) returns (stream FrequencyMessage);
}

message FrequencyMessage {
  string session_id = 1;
  double frequency = 2;
  google.protobuf.Timestamp timestamp = 3;
}